examples/test/testpolicy9290.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9290
  namespace: namespace215
spec:
  podSelector:
    matchLabels:
      key5: value45
      key10: value18
      key6: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value9
          key28: value33
      podSelector:
        matchLabels:
          key49: value21
